--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	<body>
 		<header id="home">
 			<nav>
-				<img src="img/menu-icon.png" class="chamburger">
+				<img src="img/menu-icon.png" class="chamburger" alt="chamburger menu icon">
 				<ul>
 					<li><a href="#home" class="home active">Start</a></li>
 					<li><a href="#about" class="about">O mnie</a></li>
@@ -32,9 +32,9 @@
 			<div class="wrapper">
 				<div class="info">
 					<h2>O mnie</h2>
-					<p>Moje zainteresowanie programwaniem zrodziło się po studiach i od tamtej pory każdego dnia zgłębiam wiedzę w tym zakresie. Dziedziną, w której najlepiej się odnajduję jest Front-end, jednak w przyszłości chcialbym również swobodnie poruszać się w technologiach Back-end (stawiam już pierwsze kroki w tym kierunku). Lubię dbać o estetyczny wygląd projektów, które wykonuję oraz poszuiwać coraz lepszch rozwiązań funkcjonalnych, aby usprawnić ich działanie. Jestem osoba otwartą, potrafię pracować w grupie, chętnie uczestniczę w różnego rodzaju spotkaniach branży IT. Ponadto posiadam dużą motywację do samorozwoju i wiem, że dzięki wytrwałości w podejmowanych działaniach można wiele osiągnąć. Do tej pory rozwijałem się poprzez samodzielną naukę jednak chciałbym poszerzać zdobytą wiedzę u boku profesjonalistów.</p>
+					<p>Moje zainteresowanie programwaniem zrodziło się po studiach i od tamtej pory każdego dnia zgłębiam wiedzę w tym zakresie. Dziedziną, w której najlepiej się odnajduję jest Front-end, jednak w przyszłości chcialbym również swobodnie poruszać się w technologiach Back-end (stawiam już pierwsze kroki w tym kierunku). Lubię dbać o estetyczny wygląd projektów, które wykonuję oraz poszukiwać coraz lepszch rozwiązań funkcjonalnych, aby usprawnić ich działanie. Jestem osoba otwartą, potrafię pracować w grupie, chętnie uczestniczę w różnego rodzaju spotkaniach branży IT. Ponadto posiadam dużą motywację do samorozwoju i wiem, że dzięki wytrwałości w podejmowanych działaniach można wiele osiągnąć. Do tej pory rozwijałem się poprzez samodzielną naukę jednak chciałbym poszerzać zdobytą wiedzę u boku profesjonalistów.</p>
 				</div>
-				<img src="img/me1.jpg" alt="my picture">
+				<img src="img/me.jpg" alt="my picture">
 			</div>
 		</section>
 		<section id="skills" class="wrapper">
@@ -63,14 +63,14 @@
 						<a href="https://piotrmichal.github.io/dev-challenge" class="icon-link-2" target="_blank"></a>
 						<a href="https://github.com/piotrmichal/dev-challenge" class="icon-github-circled" target="_blank"></a>
 					</div>
-					<img src="img/project1.jpg" alt="latest project picture">
+					<img src="img/project1.jpg" alt="my latest project picture">
 				</div>
 				<div class="project-box">
 					<div class="overlay">
 						<a href="https://piotrmichal.github.io/bootstrap-page" class="icon-link-2" target="_blank"></a>
 						<a href="https://github.com/piotrmichal/bootstrap-page" class="icon-github-circled" target="_blank"></a>
 					</div>
-					<img src="img/project2.jpg" alt="latest project picture">
+					<img src="img/project2.jpg" alt="my latest project picture">
 				</div>
 			</div>
 			<p>Zobacz więcej na <a href="https://github.com/piotrmichal" target="_blank">GitHub</a></p>
@@ -97,8 +97,8 @@
 			<p>Piotr Michalczuk &copy; Wszystkie prawa zastrzeżone.</p>
 		</footer>
 
-		<sript src="//code.jquery.com/jquery-3.1.0.min.js"></sript>
-		<script window.jQuery || document.write('<script src="js/jquery-3.1.0.min.js"><\/script')></script>
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+		<script src="js/jquery-3.1.0.min.js"></script>
 		<script src="js/script.js"></script>
 	</body>
 </html>
