--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	<body>
 		<header id="home">
 			<nav>
-				<img src="img/menu-icon.png" class="chamburger" alt="chamburger menu icon">
+				<img src="img/menu-icon.png" class="hamburger" alt="hamburger menu icon">
 				<ul>
 					<li><a href="#home" class="home active">Start</a></li>
 					<li><a href="#about" class="about">O mnie</a></li>
