--- a/index.html
+++ b/index.html
@@ -72,6 +72,13 @@
 					</div>
 					<img src="img/project2.jpg" alt="my latest project picture">
 				</div>
+				<div class="project-box">
+					<div class="overlay">
+						<a href="https://piotrmichal.github.io/image-gallery" class="icon-link-2" target="_blank"></a>
+						<a href="https://github.com/piotrmichal/image-gallery" class="icon-github-circled" target="_blank"></a>
+					</div>
+					<img src="img/project3.jpg" alt="my latest project picture">
+				</div>
 			</div>
 			<p>Zobacz więcej na <a href="https://github.com/piotrmichal" target="_blank">GitHub</a></p>
 		</section>
