added another project

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<link rel="stylesheet" href="fontello/css/fontello.css">
 		<link rel="stylesheet" href="css/style.css">
-		<title>Portfolio</title>
+		<title>Piotr Michalczuk - Portfolio</title>
 	</head>
 	<body>
 		<header id="home">
@@ -32,7 +32,7 @@
 			<div class="wrapper">
 				<div class="info">
 					<h2>O mnie</h2>
-					<p>Moje zainteresowanie programowaniem zrodziło się po studiach i od tamtej pory każdego dnia zgłębiam wiedzę w tym zakresie. Dziedziną, w której najlepiej się odnajduję jest Front-end, jednak w przyszłości chciałbym również swobodnie poruszać się w technologiach Back-end (stawiam już pierwsze kroki w tym kierunku). Lubię dbać o estetyczny wygląd projektów, które wykonuję oraz poszukiwać coraz lepszch rozwiązań funkcjonalnych, aby usprawnić ich działanie. Jestem osobą otwartą, potrafię pracować w grupie, chętnie uczestniczę w różnego rodzaju spotkaniach branży IT. Ponadto posiadam dużą motywację do samorozwoju i wiem, że dzięki wytrwałości w podejmowanych działaniach można wiele osiągnąć. Do tej pory rozwijałem się poprzez samodzielną naukę, jednak chciałbym poszerzać zdobytą wiedzę u boku profesjonalistów.</p>
+					<p>Moje zainteresowanie programowaniem zrodziło się po studiach i od tamtej pory każdego dnia zgłębiam wiedzę w tym zakresie. Dziedziną, w której najlepiej się odnajduję jest Front-end, jednak w przyszłości chciałbym również swobodnie poruszać się w innych technologiach. Lubię dbać o estetyczny wygląd projektów, które wykonuję oraz poszukiwać coraz lepszch rozwiązań funkcjonalnych, aby usprawnić ich działanie. Jestem osobą otwartą, potrafię pracować w grupie, chętnie uczestniczę w różnego rodzaju spotkaniach branży IT. Ponadto posiadam dużą motywację do samorozwoju i wiem, że dzięki wytrwałości w podejmowanych działaniach można wiele osiągnąć. Do tej pory rozwijałem się poprzez samodzielną naukę, jednak chciałbym poszerzać zdobytą wiedzę u boku profesjonalistów.</p>
 				</div>
 				<img src="img/me.jpg" alt="my picture">
 			</div>
@@ -47,6 +47,7 @@
 				<img src="img/bootstrap.png" class="second-line" alt="bootstrap icon">
 				<img src="img/sass.png" class="second-line" alt="sass icon">
 				<img src="img/jquery.png" class="second-line" alt="jquery icon">
+				<img src="img/gulp.png" class="third-line" alt="gulp icon">
 				<img src="img/git.png" class="second-line" alt="git icon">
 				<img src="img/ps.png" class="second-line" alt="photoshop icon">
 			</div>
@@ -74,10 +75,17 @@
 				</div>
 				<div class="project-box">
 					<div class="overlay">
+						<a href="https://piotrmichal.github.io/flickr-gallery" class="icon-link-2" target="_blank"></a>
+						<a href="https://github.com/piotrmichal/flickr-gallery" class="icon-github-circled" target="_blank"></a>
+					</div>
+					<img src="img/project3.jpg" alt="my latest project picture">
+				</div>
+				<div class="project-box">
+					<div class="overlay">
 						<a href="https://piotrmichal.github.io/image-gallery" class="icon-link-2" target="_blank"></a>
 						<a href="https://github.com/piotrmichal/image-gallery" class="icon-github-circled" target="_blank"></a>
 					</div>
-					<img src="img/project3.jpg" alt="my latest project picture">
+					<img src="img/project4.jpg" alt="my latest project picture">
 				</div>
 			</div>
 			<p>Zobacz więcej na <a href="https://github.com/piotrmichal" target="_blank">GitHub</a></p>
