changed contact icons and rwd rules

--- a/index.html
+++ b/index.html
@@ -98,11 +98,11 @@
 					<p>tel. 531 861 755</p>
 				</div>
 				<div class="icon">
-					<a href="#contact" class="icon-mail-alt"></a>
+					<a href="#contact" class="icon-mail"></a>
 					<p>piotrekmichal91@gmail.com</p>
 				</div>
 				<div class="icon">
-					<a href="https://www.facebook.com/piotrek.michalczuk" class="icon-facebook-squared" target="_blank"></a>
+					<a href="https://www.facebook.com/piotrek.michalczuk" class="icon-facebook-official" target="_blank"></a>
 					<p>Piotrek Michalczuk</p>
 				</div>
 			</div>
