added new project

--- a/index.html
+++ b/index.html
@@ -61,6 +61,13 @@
 			<div class="latest">
 				<div class="project-box">
 					<div class="overlay">
+						<a href="https://piotrmichal.github.io/reservation-system" class="icon-link-2" target="_blank"></a>
+						<a href="https://github.com/piotrmichal/reservation-system" class="icon-github-circled" target="_blank"></a>
+					</div>
+					<img src="img/project5.jpg" alt="my latest project picture">
+				</div>
+				<div class="project-box">
+					<div class="overlay">
 						<a href="https://piotrmichal.github.io/dev-challenge" class="icon-link-2" target="_blank"></a>
 						<a href="https://github.com/piotrmichal/dev-challenge" class="icon-github-circled" target="_blank"></a>
 					</div>
